[package]
name = "common-libs"
version = "0.1.0"
authors = [""]
description = ""
repository = "https://github.com/openethereum/openethereum/"
homepage = ""
license = "GPL-3.0"
edition = "2021"

[dependencies]
ethereum-types = { version = "0.9.2", optional = true}
keccak-hash = { version = "0.5.0", optional = true}
parity-bytes = { version = "0.1", optional = true}
