[package]
description = "OpenEthereum Engine API Servers (WS, HTTP)"
name = "openethereum-engine-api"
version = "0.0.1"
license = "GPL-3.0"
edition = "2021"
#authors = ["xDai Chain <admin@xdai.io>"]

[lib]

[dependencies]
serde = "1.0"
serde_json = "1.0"

bytes = { version = "1.1.0"}
hex = "0.4.3"

ethereum-types = "0.13.1"
ethereum = { version = "0.11.1", features = ["with-serde"]}

jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
