[package]
description = "Parity Ethereum JSON Deserialization"
name = "ethjson"
version = "0.1.0"
edition = "2018"
authors = [
  "Gnosis Ltd <openethereum@gnosis.io>",
  "Parity Technologies <admin@parity.io>"
  ]

[dependencies]
ethereum-types = "0.4"
ethkey = { path = "../accounts/ethkey" }
common-types = { path = "../ethcore/types" }
rustc-hex = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
macros = { path = "../util/macros" }
maplit = "1.0.2"
