[package]
name = "kvdb-rocksdb"
version = "0.9.1"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "kvdb implementation backed by RocksDB"
license = "MIT OR Apache-2.0"
edition = "2018"

[[bench]]
name = "bench_read_perf"
harness = false

[dependencies]
smallvec = "1.0.0"
fs-swap = "0.2.4"
kvdb = "0.7" 
log = "0.4.8"
num_cpus = "1.10.1"
parking_lot = "0.10.0"
regex = "1.3.1"
rocksdb = { version = "0.15", features = ["snappy"], default-features = false }
owning_ref = "0.4.0"
parity-util-mem = { version = "0.7", default-features = false, features = ["std", "smallvec"] }

[dev-dependencies]
alloc_counter = "0.0.4"
criterion = "0.3"
ethereum-types = "0.9.2"
kvdb-shared-tests = "0.5"
rand = "0.7.2"
tempdir = "0.3.7"
keccak-hash = "0.5.1"
sysinfo = "0.11.7"
ctrlc = "3.1.4"
time = "0.1"
