[package]
description = "Parity Ethereum JSON-RPC Servers (WS, HTTP, IPC)"
name = "parity-rpc"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]

[dependencies]
ansi_term = "0.10"
futures = "0.1.6"
log = "0.4"
order-stat = "0.1"
parking_lot = "0.11.1"
rand = "0.7.3"
rand_xorshift = "0.2.0"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempdir = "0.3"
tiny-keccak = "1.4"
tokio-timer = "0.1"
transient-hashmap = "0.4"
itertools = "0.5"

jsonrpc-core = "15.0.0"
jsonrpc-derive = "15.0.0"
jsonrpc-http-server = "15.0.0"
jsonrpc-ws-server = "15.0.0"
jsonrpc-ipc-server = "15.0.0"
jsonrpc-pubsub = "15.0.0"

common-types = { path = "../ethcore/types" }
ethash = { path = "../concensus/ethash" }
ethcore = { path = "../ethcore" }
ethcore-accounts = { path = "../accounts", optional = true }
ethcore-logger = { path = "../../bin/oe/logger" }
ethcore-miner = { path = "../concensus/miner" }
ethcore-network = { path = "../net/network" }
ethcore-sync = { path = "../ethcore/sync" }
ethereum-types = "0.9.2"
parity-bytes = "0.1"
parity-crypto = { version = "0.6.2", features = [ "publickey" ] }

eip-712 = { path = "../util/EIP-712" }
ethjson = { path = "../ethjson" }
ethkey = { path = "../accounts/ethkey" }
ethstore = { path = "../accounts/ethstore" }
fetch = { path = "../net/fetch" }
keccak-hash = "0.5.0"
parity-runtime = { path = "../runtime/runtime" }
parity-version = { path = "../util/version" }
rlp = { version = "0.4.6" }
stats = { path = "../util/stats" }
vm = { path = "../vm/vm" }

[dev-dependencies]
ethcore = { path = "../ethcore", features = ["test-helpers"] }
ethcore-accounts = { path = "../accounts" }
ethcore-io = { path = "../runtime/io" }
ethcore-network = { path = "../net/network" }
fake-fetch = { path = "../net/fake-fetch" }
macros = { path = "../util/macros" }
pretty_assertions = "0.1"
txpool = { path = "../transaction-pool" }

[features]
accounts = ["ethcore-accounts"]
