[package]
description = "OpenEthereum Miner Interface."
name = "ethcore-miner"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
# Only work_notify, consider a separate crate
ethash = { path = "../../concensus/ethash", optional = true }
fetch = { path = "../../net/fetch", optional = true }
hyper = { version = "0.12", optional = true }
url = { version = "2", optional = true }

# Miner
ansi_term = "0.10"
common-types = { path = "../../ethcore/types" }
error-chain = "0.12"
ethabi = "12.0.0"
ethabi-derive = "12.0.0"
ethabi-contract = "11.0.0"
ethcore-call-contract = { path = "../../vm/call-contract" }
ethereum-types = "0.9.2"
futures = "0.1"
keccak-hash = "0.5.0"
linked-hash-map = "0.5"
log = "0.4"
parity-crypto = { version = "0.6.2", features = [ "publickey" ] }
parity-runtime = { path = "../../runtime/runtime" }
parity-util-mem = "0.7"
parking_lot = "0.11.1"
price-info = { path = "./price-info", optional = true }
rlp = { version = "0.4.6" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
trace-time = "0.1"
txpool = { path = "../../transaction-pool" }

[dev-dependencies]
env_logger = "0.5"
ethkey = { path = "../../accounts/ethkey" }
rustc-hex = "1.0"

[features]
work-notify = ["ethash", "fetch", "hyper", "url"]
