[package]
name = "journaldb"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "A `HashDB` which can manage a short-term journal potentially containing many forks of mutually exclusive actions"
license = "GPL3"

[dependencies]
parity-bytes = "0.1"
ethereum-types = "0.9.2"
hash-db = "0.11.0"
keccak-hasher = { path = "../../util/keccak-hasher" }
ethcore-db = { path = "../../db/db"}
kvdb = "0.1"
log = "0.4"
memory-db = { path = "../memory-db" }
parity-util-mem = "0.7"
parking_lot = "0.11.1"
fastmap = { path = "../../util/fastmap" }
rlp = { version = "0.4.6" }

[dev-dependencies]
env_logger = "0.5"
keccak-hash = "0.5.0"
kvdb-memorydb = "=0.1.0"
