[package]
description = "OpenEthereum Blockchain Database, Test Generator, Configuration, Caching, Importing Blocks, and Block Information"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore-blockchain"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ansi_term = "0.11"
blooms-db = { path = "../../db/blooms-db" }
common-types = { path = "../types" }
ethcore-db = { path = "../../db/db" }
ethereum-types = "0.9.2"
itertools = "0.5"
keccak-hash = "0.5.0"
kvdb = "0.1"
log = "0.4"
parity-bytes = "0.1"
parity-crypto = { version = "0.6.2", features = [ "publickey" ] }
parity-util-mem = "0.7"
parking_lot = "0.11.1"
rand = "0.7.3"
rayon = "1.1"
rlp = { version = "0.4.6" }
rlp_compress = { path = "../../util/rlp-compress" }
rlp_derive = { path = "../../util/rlp-derive" }
triehash-ethereum = { version = "0.2",  path = "../../util/triehash-ethereum" }
stats = { path = "../../util/stats" }

[dev-dependencies]
env_logger = "0.5"
ethkey = { path = "../../accounts/ethkey" }
rustc-hex = "1.0"
tempdir = "0.3"
kvdb-memorydb = "0.1"
