[package]
description = "Parity Ethereum (EthCore) Blockchain Synchronization (Strategy, Blockchain Downloader, Blockchain Synchronization Implementation of Ethereum Protocol, Propagating Data to Peers, Requesting Data from Peers, Supplying Data in Response to Peer Requests, Handling Peer Responses, Matching Packet IDs and Protocol, Light Client Synchronization of Header Chain, Header Download State Machine, Light Decoding & Verifying Header Responses, Private Transaction Handling, Synchronization Snapshot Service to Download & Verify Block Chunks, Peer Connection Management and Blockchain Client I/O Interface for Synchronization Handler, Transaction Statistics)"
name = "ethcore-sync"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]

[dependencies]
common-types = { path = "../types" }
enum_primitive = "0.1.1"
derive_more = "0.99"
ethcore = { path = ".." }
ethcore-io = { path = "../../runtime/io" }
ethcore-network = { path = "../../net/network" }
ethcore-network-devp2p = { path = "../../net/network-devp2p" }
ethcore-miner = { path = "../../concensus/miner" }
ethereum-forkid = "0.2"
primitive_types07 = { package = "primitive-types", version = "0.7"}
ethereum-types = "0.9.2"
ethkey = { path = "../../accounts/ethkey" }
ethstore = { path = "../../accounts/ethstore" }
fastmap = { path = "../../util/fastmap" }
hash-db = "0.11.0"
keccak-hash = "0.5.0"
keccak-hasher = { path = "../../util/keccak-hasher" }
kvdb = "0.1"
log = "0.4"
macros = { path = "../../util/macros" }
parity-bytes = "0.1"
parity-crypto = { version = "0.6.2", features = [ "publickey" ] }
parity-util-mem = "0.7"
parking_lot = "0.11.1"
rand = "0.7.3"
rand_xorshift = "0.2.0"
rlp = { version = "0.4.6" }
trace-time = "0.1"
triehash-ethereum = {version = "0.2", path = "../../util/triehash-ethereum" }
stats = { path = "../../util/stats" }
crossbeam-channel = "0.5.2"

[dev-dependencies]
env_logger = "0.5"
ethcore = { path = "..", features = ["test-helpers"] }
ethcore-io = { path = "../../runtime/io", features = ["mio"] }
kvdb-memorydb = "0.1"
rustc-hex = "1.0"
