[package]
description = "Parity Ethereum Common Types"
name = "common-types"
version = "0.1.0"
edition = "2018"
authors = [
  "Gnosis Ltd <openethereum@gnosis.io>",
  "Parity Technologies <admin@parity.io>",
]

[dependencies]
ethereum-types = "0.4"

ethkey = { path = "../../accounts/ethkey" }
heapsize = "0.4"
keccak-hash = "0.1"
parity-bytes = "0.1"
rlp = { version = "0.3.0", features = ["ethereum"] }
rlp_derive = { path = "../../util/rlp-derive" }
unexpected = { path = "../../util/unexpected" }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
hex = "0.4.3"
inflate = "0.4.5"

[dev-dependencies]
rustc-hex = "1.0"

[features]
test-helpers = []
