[package]
description = "DevP2P implementation of the ethcore network library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore-network-devp2p"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
mio = "0.6.8"
bytes = "0.4"
rand = "0.7.3"
tiny-keccak = "1.4"
rust-crypto = "0.2.34"
slab = "0.2"
igd = "0.7"
libc = "0.2.7"
parking_lot = "0.11.1"
ansi_term = "0.10"
rustc-hex = "1.0"
ethcore-io = { path = "../../runtime/io", features = ["mio"] }
parity-bytes = "0.1"
parity-crypto = { version = "0.6.2", features = [ "publickey" ] }
ethcore-network = { path = "../network" }
ethereum-types = "0.9.2"
ethkey = { path = "../../../crates/accounts/ethkey" }
rlp = { version = "0.4.6" }
parity-path = "0.1"
ipnetwork = "0.12.6"
keccak-hash = "0.5.0"
parity-snappy = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = { version = "0.12", default-features = false }
lru-cache = "0.1"

[dev-dependencies]
env_logger = "0.5"
tempdir = "0.3"
assert_matches = "1.2"

[features]
default = []
