[package]
description = "Ethcore network library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore-network"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
error-chain = { version = "0.12", default-features = false }
parity-crypto = { version = "0.6.2", features = [ "publickey"] }
ethcore-io = { path = "../../runtime/io" }
ethereum-types = "0.9.2"
ethkey = { path = "../../../crates/accounts/ethkey" }
ipnetwork = "0.12.6"
lazy_static = "1.0"
rlp = { version = "0.4.6" }
libc = "0.2"
parity-snappy = "0.1"
semver = {version="0.9.0", features=["serde"]}
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
assert_matches = "1.2"
