[package]
description = "OpenEthereum Smart Contract based Node Filter, Manage Permissions of Network Connections"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "node-filter"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore = { path = "../../ethcore"}
ethcore-network = { path = "../network" }
ethcore-network-devp2p = { path = "../network-devp2p" }
ethereum-types = "0.9.2"
log = "0.4"
parking_lot = "0.11.1"
ethabi = "12.0.0"
ethabi-derive = "12.0.0"
ethabi-contract = "11.0.0"
lru-cache = "0.1"

[dev-dependencies]
ethcore = { path = "../../ethcore", features = ["test-helpers"] }
kvdb-memorydb = "0.1"
ethcore-io = { path = "../../runtime/io" }
tempdir = "0.3"
