[package]
description = "OpenEthereum CLI Signer Tool"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "cli-signer"
version = "1.4.0"
authors = ["Parity <admin@parity.io>"]

[dependencies]
futures = "0.1"
rpassword = "1.0"
parity-rpc = { path = "../../rpc" }
parity-rpc-client = { path = "rpc-client" }

[dependencies.common-libs]
path = "../../common-libs"
features = [
    "ethereum-types"
]
