[package]
name = "dir"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL3"

[dependencies]
journaldb = { path = "../../db/journaldb" }
app_dirs = { git = "https://github.com/openethereum/app-dirs-rs" }
home = "0.3"

[dependencies.common-libs]
path = "../../common-libs"
features = [
    "ethereum-types"
]
