[package]
description = "Virtual Machines (VM) Support Library"
name = "vm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parity-bytes = "0.1"
patricia-trie-ethereum = { path = "../../db/patricia-trie-ethereum" }
ethjson = { path = "../../ethjson" }
rlp = { version = "0.4.6" }
keccak-hash = "0.5.0"

[dependencies.common-libs]
path = "../../common-libs"
features = [
    "ethereum-types"
]
