[package]
description = "Fetch current ETH price"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "price-info"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
fetch = { path = "../../../net/fetch" }
futures = "0.1"
parity-runtime = { path = "../../../runtime/runtime" }
log = "0.4"
serde_json = "1.0"

[dev-dependencies]
parking_lot = "0.11.1"
fake-fetch = { path = "../../../net/fake-fetch" }
